@@ -6,20 +6,20 @@
 
 #include <testfwk.h>
 
-static {type} x1 = 2;
+static {type} {type}_1 = 2;
 
-static {type} s_get_x1(void)
+static {type} s_get_{type}_1(void)
 {
-	{type} alfa = x1;
-	{type} beta = x1 + alfa;
-	{type} gamma = x1 + beta;
+	{type} alfa = {type}_1;
+	{type} beta = {type}_1 + alfa;
+	{type} gamma = {type}_1 + beta;
 	return alfa + beta + gamma;
 }
 
-{type} get_x1(void);
+{type} get_{type}_1(void);
 
 void testBug(void)
 {
-	ASSERT (s_get_x1() == 12);
-	ASSERT (get_x1() == 6);
+	ASSERT (s_get_{type}_1() == 12);
+	ASSERT (get_{type}_1() == 6);
 }
